src/flake8_bugbear/snapshots/ruff__flake8_bugbear__tests__B002_B002.py.snap
---
source: src/flake8_bugbear/mod.rs
expression: checks
---
- kind:
    UnaryPrefixIncrement: ~
  location:
    row: 15
    column: 8
  end_location:
    row: 15
    column: 11
  fix: ~
  parent: ~
- kind:
    UnaryPrefixIncrement: ~
  location:
    row: 20
    column: 11
  end_location:
    row: 20
    column: 14
  fix: ~
  parent: ~

