src/flake8_bugbear/snapshots/ruff__flake8_bugbear__tests__B003_B003.py.snap
---
source: src/flake8_bugbear/mod.rs
expression: checks
---
- kind:
    AssignmentToOsEnviron: ~
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 10
  fix: ~
  parent: ~

