src/flake8_bugbear/snapshots/ruff__flake8_bugbear__tests__B009_B009_B010.py.snap
---
source: src/flake8_bugbear/mod.rs
expression: checks
---
- kind: GetAttrWithConstant
  location:
    row: 18
    column: 0
  end_location:
    row: 18
    column: 19
  fix:
    location:
      row: 18
      column: 0
    end_location:
      row: 18
      column: 19
    content: foo.bar
    message: ~
  parent: ~
- kind: GetAttrWithConstant
  location:
    row: 19
    column: 0
  end_location:
    row: 19
    column: 23
  fix:
    location:
      row: 19
      column: 0
    end_location:
      row: 19
      column: 23
    content: foo._123abc
    message: ~
  parent: ~
- kind: GetAttrWithConstant
  location:
    row: 20
    column: 0
  end_location:
    row: 20
    column: 22
  fix:
    location:
      row: 20
      column: 0
    end_location:
      row: 20
      column: 22
    content: foo.abc123
    message: ~
  parent: ~
- kind: GetAttrWithConstant
  location:
    row: 21
    column: 0
  end_location:
    row: 21
    column: 23
  fix:
    location:
      row: 21
      column: 0
    end_location:
      row: 21
      column: 23
    content: foo.abc123
    message: ~
  parent: ~
- kind: GetAttrWithConstant
  location:
    row: 22
    column: 14
  end_location:
    row: 22
    column: 31
  fix:
    location:
      row: 22
      column: 14
    end_location:
      row: 22
      column: 31
    content: x.bar
    message: ~
  parent: ~
- kind: GetAttrWithConstant
  location:
    row: 23
    column: 3
  end_location:
    row: 23
    column: 20
  fix:
    location:
      row: 23
      column: 3
    end_location:
      row: 23
      column: 20
    content: x.bar
    message: ~
  parent: ~

