src/flake8_bugbear/snapshots/ruff__flake8_bugbear__tests__B011_B011.py.snap
---
source: src/flake8_bugbear/mod.rs
expression: checks
---
- kind: DoNotAssertFalse
  location:
    row: 8
    column: 7
  end_location:
    row: 8
    column: 12
  fix:
    patch:
      content: raise AssertionError()
      location:
        row: 8
        column: 0
      end_location:
        row: 8
        column: 12
- kind: DoNotAssertFalse
  location:
    row: 10
    column: 7
  end_location:
    row: 10
    column: 12
  fix:
    patch:
      content: "raise AssertionError('message')"
      location:
        row: 10
        column: 0
      end_location:
        row: 10
        column: 23

