src/flake8_bugbear/snapshots/ruff__flake8_bugbear__tests__B012_B012.py.snap
---
source: src/flake8_bugbear/mod.rs
expression: checks
---
- kind:
    JumpStatementInFinally: return
  location:
    row: 5
    column: 8
  end_location:
    row: 5
    column: 14
  fix: ~
- kind:
    JumpStatementInFinally: return
  location:
    row: 13
    column: 12
  end_location:
    row: 13
    column: 18
  fix: ~
- kind:
    JumpStatementInFinally: return
  location:
    row: 21
    column: 12
  end_location:
    row: 21
    column: 18
  fix: ~
- kind:
    JumpStatementInFinally: return
  location:
    row: 31
    column: 12
  end_location:
    row: 31
    column: 18
  fix: ~
- kind:
    JumpStatementInFinally: return
  location:
    row: 44
    column: 20
  end_location:
    row: 44
    column: 26
  fix: ~
- kind:
    JumpStatementInFinally: break
  location:
    row: 66
    column: 12
  end_location:
    row: 66
    column: 17
  fix: ~
- kind:
    JumpStatementInFinally: continue
  location:
    row: 78
    column: 12
  end_location:
    row: 78
    column: 20
  fix: ~
- kind:
    JumpStatementInFinally: return
  location:
    row: 94
    column: 12
  end_location:
    row: 94
    column: 18
  fix: ~
- kind:
    JumpStatementInFinally: continue
  location:
    row: 101
    column: 8
  end_location:
    row: 101
    column: 16
  fix: ~
- kind:
    JumpStatementInFinally: break
  location:
    row: 107
    column: 8
  end_location:
    row: 107
    column: 13
  fix: ~

